tree-sitter-snowflake/test/corpus/basic.txt
==================
Core Snowflake tokens
==================

SELECT payload:items[0]::VARIANT
FROM @~/stage/path
WHERE payload:name ILIKE 'nagaimo%'
->> SELECT * FROM $1;

---

(source_file
  (statement
    (keyword)
    (identifier)
    (operator)
    (identifier)
    (punctuation)
    (number)
    (punctuation)
    (operator)
    (type)
    (keyword)
    (stage_reference)
    (keyword)
    (identifier)
    (operator)
    (identifier)
    (keyword)
    (string)
    (operator)
    (keyword)
    (operator)
    (keyword)
    (variable)))

==================
Embedded body
==================

CREATE PROCEDURE p()
RETURNS STRING
LANGUAGE JAVASCRIPT
AS $$
return "ok";
$$;

---

(source_file
  (statement
    (keyword)
    (keyword)
    (expression
      (call_expression
        function: (identifier)
        arguments: (argument_list)))
    (keyword)
    (type)
    (keyword)
    (keyword)
    (keyword)
    (dollar_string)))

==================
Multiple statements
==================

SELECT 1;
SELECT 2;

---

(source_file
  (statement
    (keyword)
    (number))
  (statement
    (keyword)
    (number)))
